--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<%= link_to "Back to artcles", articles_path %>
+<div class="center jumbotron">
+  <h1>3S Blog</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-danger btn-large btn-xlarge" %>
+</div>
