--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,10 +65,20 @@ footer ul li {
     margin-left: 15px;
 }
 
+.article-meta-details {
+    border-top: 1px solid #eaeaea;
+    margin-top: 15px;
+}
+
 .article-actions {
     border-top: 1px solid #eaeaea;
     padding-top: 5px;
 }
 .description {
     margin-top: 0;
+}
+
+.article-title {
+    font-weight: bold;
+    font-size: 1.5em;
 }
