--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,3 @@
-<h1 align="center">Signup for 3S blog</h1>
+<h1 align="center">Edit your account</h1>
 <%= render 'shared/errors', obj: @user %>
-
 <%= render 'form' %>
