--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,6 +40,17 @@ $navbar-default-bg: #000;
     background-color: #000;
 }
 
+.article-body {
+    border-top: 1px solid #eaeaea;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.listing {
+    list-style: none;
+    padding-left: 0;
+}
+
 footer {
     margin-top: 45px;
     padding-top: 5px;
