--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,10 @@
     <%= @user.username %>
 </h4>
 
-<%= render "articles/article", obj: @user.articles %>
+<div align="center">
+    <%= will_paginate @user_articles %>
+</div>
+    <%= render "articles/article", obj: @user_articles %>
+<div align="center">
+    <%= will_paginate @user_articles %>
+</div>
