--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class="center jumbotron">
   <h1>3S Blog</h1>
-  <%= link_to "Sign up now", "#", class: "btn btn-danger btn-large btn-xlarge" %>
+  <%= link_to "Sign up now", signup_path, class: "btn btn-danger btn-large btn-xlarge" %>
 </div>
