--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,6 +14,9 @@
                     <li>
                         <small>
                             <%= pluralize(user.articles.count, "article") if user.articles %>
+                            <% if logged_in? and current_user.admin? %>
+                                <li><%= link_to "Delete", user_path(user), method: :delete %></li>
+                            <% end %>
                         </small>
                     </li>
                 </div>
