--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,16 +16,21 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Articles", articles_path %></li>
         <li><%= link_to "Users", users_path %></li>
-        <% if logged_in? && current_user.admin? %>
+      
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Categories", categories_path %></li>
-              <li><%= link_to "New Category", new_category_path %></li>
-              <li><a href="#">Something else here</a></li>
+              <% Category.all.each do |category| %>
+                <li><%= link_to "#{category.name}", category_path(category) %></li>
+              <% end %>
+              <% if logged_in? && current_user.admin? %>
+                <li><%= link_to "New Category", new_category_path %></li>
+              <% end %>
+              <li><%= link_to "All Categories", categories_path %></li>
             </ul>
           </li>
-        <% end %>
+        
+        
         <% if logged_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Action <span class="caret"></span></a>
