--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,6 +51,17 @@ $navbar-default-bg: #000;
     padding-left: 0;
 }
 
+.badge {
+    background-color: #CEF6F5;
+    text-transform: uppercase;
+    letter-specing: -1px;
+    font-weight: bold;
+}
+
+.input_checkbox inpu {
+    width: auto !important;
+}
+
 footer {
     margin-top: 45px;
     padding-top: 5px;
