--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,6 +6,9 @@
             <div class="well col-md-4 col-md-offset-4">
                 <li class="article-title">
                     <%= link_to "#{category.name}", category_path(category) %>
+                    <li>
+                        <small><%= pluralize(category.articles.count, "articles") %></small>
+                    </li>
                     <% if logged_in? && current_user.admin? %>
                         <div class="article-actions">
                             <%= link_to "Edit this article", edit_category_path(category), class: "btn btn-xs btn-primary" %>
